--- a/compose.yml
+++ b/compose.yml
@@ -1,16 +1,18 @@
+version: "3.9"
+
 services:
   web:
+    build:
+      context: .
+      dockerfile: ./Containerfile
     environment:
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
-    build:
-      context: .
-      dockerfile: ./.docker/Dockerfile
     volumes:
-      - ./:/var/www/html
+      - ./:/var/www/html:z
     networks:
       - app-network
 
@@ -20,8 +22,8 @@ services:
       - "8080:80"
     restart: always
     volumes:
-      - ./:/var/www/html
-      - ./.docker/conf/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./:/var/www/html:z
+      - ./nginx-config.conf:/etc/nginx/conf.d/default.conf:z
     depends_on:
       - web
     networks:
@@ -37,8 +39,8 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - db_data:/var/lib/postgresql/data
-      - ./.docker/conf/postgres/:/docker-entrypoint-initdb.d
+      - db_data:/var/lib/postgresql/data:z
+      - ./postgres:/docker-entrypoint-initdb.d:z
     networks:
       - app-network
 
